# mediafuzzer

./: .env.example  .gitignore  README.md  readme.md  requirements.txt  run_instruction.md  run_pipeline.py  run_web.sh
apk/: com.whatsapp_2.19.230-452939_minAPI15(arm64-v8a)(nodpi)_apkmirror.com.apk:Zone.Identifier
config/: __init__.py  settings.py
config/file_formats/: __init__.py  base.py  gif.py  jpeg.py  webp.py
docs/: apk_io.md  config.md  dev-guide.md  emulation.md  fuzzing.md  llm_interface.md  memory_safety.md  pipeline.md  reporter.md  testing.md  tools.md
src/: __init__.py
src/apk_io/: __init__.py  extractor.py  so_loader.py  static_analyzer.py
src/emulation/: __init__.py  dependency_mocker.py  hook_manager.py  qiling_env.py
src/fuzzing/: __init__.py  coverage.py  format_aware.py  fuzz_worker.py  harness.py  mutator.py
src/llm_interface/: __init__.py  prompt_templates.py  querier.py
src/memory_safety/: __init__.py  sanitizer_hooks.py  tag_based.py
src/reporter/: __init__.py  crash_aggregator.py  report_generator.py
tests/: conftest.py  test_apk_io.py  test_config.py  test_fuzzing.py  test_llm_interface.py  test_memory_safety.py  test_pipeline.py  test_reporter.py
tests/fixtures/: build_fixtures.sh  double_free_test.c  jni_test.c  overflow_test.c  simple_add.c  uaf_test.c
tools/coverage_runtime/: coverage.c
tools/libfuzzer_harness/: CMakeLists.txt  build.sh  harness_template.c
webapp/: __init__.py  app.py  fuzz_monitor.py  llm_adapter.py  pipeline_controller.py  routes.py  session_state.py  socket_events.py
(+9 files in other folders)
